	fix: no event creation during shutdown (might loop before)
	fix: no logging due to wrong log levels
	fix: without-inotify compile option now works to compile on OSX
	fix: in case of HUP-reset imply insist=true, since startup is known to be
		configured correctly.
	fix: a series of typos in comments, manpage etc.
	fix: moves to and from deleted directories (deleted when Lsyncd gets notified)
	     were not correctly translated
	change: complain if any "rsyncOps" is given
	change: splitted the default configurations in their own files.
		more cleanly seperated from the Lsyncd runner, and highlights it are just
		Layer 1 configurations that happen to be provided by default.
	change: Beautified the code, no extra spaces at line end, ' instead of ",
		supposing 100 char width to view,
	change: Lsyncd now remembers the absolute path of its config file during HUPs

25-08-2011: 2.0.5
	fix: Lsyncd will now terminate if it inotify watching exceeds
		its preset limit.
	fix: rsync error exit code 12 now results in retries.
	fix: Lsyncd 2.0.5 should now compile better on a bit elder
		GNU/Linux versions.
	fix: examples are now installed in the configured document directory.
	fix: partial transfers during startup are considered ok. Lsyncd will
		rework the specified files anyway.
	change: Layer 1 interface init() now receives an "Init" event instead
		of an inlet.
	change: builtin Lua code is now loaded via a c-array.
		Now more portable and correct memory flags are set.
	change: Lsyncd will now bail on unknown error codes.
	enhancement: settings.maxProcesses can now be set as a global limit
		of childprocesses
	enhancement: Lsyncd will refuse to start when any startup rsync
		does not work cleanly and returns "again" unless settings.insist or
		--insist is specified, then Lsyncd will keep retrying until it works.
	enhancement: option "rsyncBinary" determines which rsync Lsyncd calls.
		 Default is "/usr/bin/rsync"